# rules_cloudformation

./: .bazelrc  CHANGELOG.md  MODULE.bazel  README.md  maven_install.json
cloudformation/: BUILD.bazel  aws_s3_bucket.bzl  cfn_types.bzl  compute.bzl  database.bzl  defs.bzl  deploy.bzl  identity.bzl  intrinsics.bzl  messaging.bzl  observability.bzl  output.bzl  parameter.bzl  stack.bzl  storage.bzl
cloudformation/aws_cli/: BUILD.bazel  defs.bzl  system_aws.sh  toolchain_type.bzl
cloudformation/private/: BUILD.bazel  assemble.bzl  extensions.bzl  extract_cfn_types.py  overlay.bzl  overlay_descriptions.py  stack_aggregator.py
cloudformation/private/assembler_src/aws/cfn/codegen/: AttributeType.java  CfnSpecification.java  PropertyType.java  ResourceType.java  SingleCfnSpecification.java
cloudformation/private/assembler_src/aws/cfn/codegen/json/: Codegen.java  Config.java  GroupSpec.java
docs/: ROADMAP.md  SCHEMA_SOURCE.md
examples/smoke/: BUILD.bazel  expected_smoke_bucket.json  expected_smoke_init.json  expected_smoke_interface.json  expected_smoke_stack.json
