load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@rules_jsonschema//starlark:defs.bzl", "jsonschema_starlark_codegen")
load("@rules_jsonschema//util:write_source_files.bzl", "write_source_files")
load("//cloudformation/private:assemble.bzl", "cfn_assemble")
load("//cloudformation/private:overlay.bzl", "cfn_overlay_descriptions")

package(default_visibility = ["//visibility:public"])

exports_files(["defs.bzl"])

bzl_library(
    name = "defs_bzl",
    srcs = ["defs.bzl"],
    deps = ["@rules_jsonschema//runtime:helpers"],
)

# ---- Spec assembly + codegen -----------------------------------------------
# One assembler invocation across the whole CFN Resource Specification
# yields one mega-schema; one jsonschema_starlark_codegen invocation
# with rules_jsonschema v0.3's auto-kinds emits a typed rule for every
# top-level AWS::Service::Resource definition (~1500). Bumping the
# upstream spec pin (cfn_sources_extension) is now the only knob —
# adding a resource type no longer needs a per-resource code change.

cfn_assemble(
    name = "assembled_all",
    spec = "@cfn_resource_spec//file:CloudFormationResourceSpecification.json",
    group_name = "all",
    includes = ["AWS::.*"],
)

# Layer the AWS-endpoint schemas' rich descriptions on top of the
# assembler's URL-only ones, for resources we've pinned endpoint
# coverage for. Resources without a pinned endpoint pass through
# unmodified.
cfn_overlay_descriptions(
    name = "assembled_all_overlaid",
    assembled = ":assembled_all",
    endpoints = [
        "@cfn_endpoint_aws_s3_bucket//file:aws-s3-bucket.json",
    ],
)

jsonschema_starlark_codegen(
    name = "defs_gen",
    schema = ":assembled_all_overlaid",
    extra_args = [
        "--kinds-pointer-base=#/definitions",
        "--kinds-pointer-suffix=/properties/Properties",
        # Top-level resources only. The assembler emits both
        # `AWS_Service_Resource` (the resource itself) and
        # `AWS_Service_Resource_SubShape` (nested property types) as
        # siblings under `#/definitions`. Two-underscore form matches
        # the former; sub-shapes are reachable via JSON-pointer refs
        # inside the parent's `properties`, not as standalone rules.
        "--kinds-key-filter=^AWS_[^_]+_[^_]+$",
        "--id-template={snake}",
        "--rule-name-template=cloudformation_{snake}",
        "--provider-name-template=Cloudformation{camel}Info",
    ],
)

# ---- diff_test gate --------------------------------------------------------

diff_test(name = "defs_up_to_date", file1 = "defs.bzl", file2 = ":defs_gen")

# `bazel run //cloudformation:update` regenerates defs.bzl.
write_source_files(
    name = "update",
    files = {
        "defs.bzl": ":defs_gen",
    },
)
